# rust-blockchain

./: .env.example  .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  miner.rs  model.rs  peer.rs  util.rs
src/model/: account_balance_map.rs  address.rs  block.rs  blockchain.rs  transaction.rs  transaction_pool.rs
src/util/: config.rs  context.rs  execution.rs  logger.rs  termination.rs
tests/: api_test.rs  peer_test.rs
tests/common/: api.rs  server.rs
